[project]
name = "timothy"
version = "0.1.0"
description = "A ðŸ˜ guardian"
authors = [{ name = "Mike Bijl", email = "bijlmike3@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
test = ["pytest>=8.4.2", "sqlalchemy[postgresql-psycopg2binary]>=2.0.44"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["."]
only-include = ["timothy"]

[tool.poe]
include = "infra_tasks.toml"

[tool.poe.tasks]
test = "pytest"
